--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bulma": "^0.4.0",
     "vue": "^2.2.1",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1"
